<resources>
    <string name="app_name">Electronic toll gates</string>
    <string name="ETG">ETG</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="edit_profile">" Edit Profile"</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Register">Register</string>
    <string name="setupProfile">Setup Profile</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="national_id">National ID</string>
    <string name="phone_number">Phone Number</string>
    <string name="city">City</string>
    <string name="old_password">Old Password</string>
    <string name="edit">Edit</string>
    <string name="upload_image">Upload Image</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="status">Status</string>
    <string name="success">Success</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="price">Price</string>
    <string name="bills">Bills</string>
    <string name="home">Home</string>
    <string name="available_balance">Available Balance</string>
    <string name="last_transaction">Last Transaction:</string>
    <string name="wallets">Wallets</string>
    <string name="wallet1">Wallet1</string>
    <string name="wallet2">Wallet2</string>
    <string name="wallet3">Wallet3</string>
    <string name="profile">Profile</string>
    <string name="Cars">Cars</string>
    <string name="Add_Car">Add Car</string>
    <string name="Edit_Car">Edit Car</string>
    <string name="Car_Model">Car Model</string>
    <string name="Car_Number">Car Number</string>
    <string name="Car_Letters">Car Letters</string>
    <string name="Add_Wallet">Add Wallet</string>
    <string name="Wallet_Name">Wallet Name</string>
    <string name="Wallet_ID">Wallet ID</string>
    <string name="EditWallet">Edit Wallet</string>
    <string name="Balance">Balance</string>
    <string name="log_out">Log out</string>
    <string name="qr_code">Qr-Code</string>
    <string name="to_open_the_gate">To Open the Gate.</string>
    <string name="_1_open_qr_code_scanner">1. Open Qr-code Scanner</string>
    <string name="_2_point_your_camera_to_this_screen_to_capture_the_code">2. Point your camera to this screen to capture the code.</string>
</resources>